adding nan handling for omega, enable sequential regression

--- a/bayesian_logreg_pyro.ipynb
+++ b/bayesian_logreg_pyro.ipynb
@@ -382,11 +382,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def logRegressionCAVI(design_mat,obs_mat,prior=None,tol=1e-16, maxiter=5000):\n",
+    "def logRegressionCAVI(design_mat,obs_mat,prior=None,omega_init=0.25,tol=1e-16, maxiter=5000):\n",
     "    num_data, design_vars = design_mat.shape\n",
     "    \n",
     "    if prior is None:\n",
@@ -397,7 +397,7 @@
     "    mu = prior[\"mu\"]\n",
     "    inv_sigma_mu = np.matmul(inv_sigma,mu).squeeze()\n",
     "    inv_sigma_logdet=logDet(inv_sigma)\n",
-    "    omega = 0.25*np.ones((num_data,design_vars)) # initial guess of omega\n",
+    "    omega = omega_init*np.ones((num_data,design_vars)) # initial guess of omega\n",
     "    \n",
     "    lower_bound = []\n",
     "\n",
@@ -407,7 +407,9 @@
     "        mu_vb = np.matmul(sigma_vb,(np.matmul(design_mat.T,obs_mat - 0.5) + inv_sigma_mu))\n",
     "        eta = np.matmul(design_mat,mu_vb)\n",
     "        xi = np.sqrt(np.power(eta,2)+np.sum(np.multiply(np.matmul(design_mat,sigma_vb),design_mat),axis=1))\n",
-    "        omega = np.tile(np.divide(np.tanh(xi/2),2*xi),(design_vars,1)).T\n",
+    "        temp_omega = np.divide(np.tanh(xi/2),2*xi)\n",
+    "        temp_omega[np.isnan(temp_omega)] = omega_init\n",
+    "        omega = np.tile(temp_omega,(design_vars,1)).T\n",
     "\n",
     "\n",
     "        lower_bound += [(0.5*design_vars + 0.5*logDet(sigma_vb) + 0.5*inv_sigma_logdet - \n",
@@ -418,25 +420,25 @@
     "        if i > 0:\n",
     "            if abs(lower_bound[i] - lower_bound[i-1]) < tol:\n",
     "                return {\"mu\": mu_vb,\n",
-    "                          \"sigma\": sigma_vb,\n",
-    "                          \"convergence\": {\"iteration\": np.arange(i),\"lower_bound\":np.array(lower_bound)},\n",
-    "                          \"xi\": xi}\n",
+    "                        \"sigma\": sigma_vb,\n",
+    "                        \"convergence\": {\"iteration\": np.arange(i+1),\"lower_bound\":np.array(lower_bound)},\n",
+    "                        \"xi\": xi,\n",
+    "                        \"omega\":temp_omega}\n",
     "\n",
-    "            \n",
     "    print(\"Algorithm fails to reach convergence at maximum iteration\")\n",
     "    return None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- 0.08897089958190918 seconds ---\n"
+      "--- 0.09177112579345703 seconds ---\n"
      ]
     }
    ],
@@ -494,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -503,11 +505,11 @@
      "text": [
       "Site: bias\n",
       "       mean       std        5%       25%       50%       75%       95%\n",
-      "0 -3.044155  0.043794 -3.115067 -3.073678 -3.043528 -3.014674 -2.974292 \n",
+      "0 -3.042245  0.045912 -3.117997 -3.074796 -3.041241 -3.010354 -2.969276 \n",
       "\n",
       "Site: weight\n",
-      "       mean      std        5%       25%       50%       75%       95%\n",
-      "0  0.041561  0.07237 -0.075784 -0.008428  0.041048  0.091723  0.158751 \n",
+      "       mean       std        5%       25%       50%       75%       95%\n",
+      "0  0.038291  0.073715 -0.079524 -0.013196  0.037937  0.089361  0.160607 \n",
       "\n"
      ]
     }
@@ -524,14 +526,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.716\n"
+      "0.689\n"
      ]
     }
    ],
@@ -541,24 +543,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- 4.614118814468384 seconds ---\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>count</td>\n",
+       "      <td>10000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>mean</td>\n",
+       "      <td>3.023092</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>std</td>\n",
+       "      <td>0.013896</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>min</td>\n",
+       "      <td>3.003613</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>25%</td>\n",
+       "      <td>3.013259</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>50%</td>\n",
+       "      <td>3.023017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>75%</td>\n",
+       "      <td>3.032885</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>max</td>\n",
+       "      <td>3.042862</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  0\n",
+       "count  10000.000000\n",
+       "mean       3.023092\n",
+       "std        0.013896\n",
+       "min        3.003613\n",
+       "25%        3.013259\n",
+       "50%        3.023017\n",
+       "75%        3.032885\n",
+       "max        3.042862"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "pd.DataFrame(cavi['xi']).describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "optim = Adam({\"lr\": 0.05})\n",
     "\n",
